# xiaoqiang_tts

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: asr_baidu.launch  asr_xunfei.launch  tts_baidu.launch  tts_xunfei.launch
src/: plot_wav.py  test_node.py  xiaoqiang_asr_node.py  xiaoqiang_tts_node.py
src/engines/: baidu_tts.py  xunfei_tts.py
src/engines/xunfei/: audio
src/engines/xunfei/msc/71a0898dcf230d51354eb2f8b57e6a92/: u.data
src/engines/xunfei/sdk/: release.txt
src/engines/xunfei/sdk/samples/asr_sample/: asr_sample.c
src/engines/xunfei/sdk/samples/iat_record_sample/: iat_record_sample.c
src/engines/xunfei/sdk/samples/iat_sample/: iat_sample.c
src/engines/xunfei/sdk/samples/ise_sample/: ise_sample.c
src/engines/xunfei/sdk/samples/sch_translate_sample/: sch_speak_sample.c
src/engines/xunfei/sdk/samples/tts_sample/: tts_sample.c
src/engines/xunfei/sdk/src/: __init__.py  python_compat.h  speech_recognizer.c  speech_recognizer.h  xunfei_asr.cpp  xunfei_asr.h  xunfei_tts.cpp
tools/: gen_audio_filename.py
